# simpleclipboard

./: Cargo.toml  README.md  README.org  install.sh
autoload/: simpleclipboard.vim  simpletabline.vim  simpletree.vim  spacemacs_theme.vim  treexplorer.vim  treexplorer_backend.vim  ts_hl.vim
doc/: simpleclipboard.txt  simpleplugin.txt  tags
plugin/: simpleclipboard.vim  simpletabline.vim  simpletree.vim  treexplorer.vim  ts_hl.vim
src/: client_lib.rs  daemon.rs  lib.rs  simpleclipboard_daemon.rs  simpletree_daemon.rs  ts_hl_daemon.rs
src/simpleclipboard/: simpleclipboard_daemon.rs  simpleclipboard_lib.rs
src/ts_hl/: ts_hl_daemon.rs
src/ts_hl/queries/: cpp.scm  cpp_symbols.scm  mod.rs  rust_symbols.scm  vim.scm  vim_symbols.scm
