[package]
name = "simpleclipboard"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.100"
arboard = "3.6.1"
bincode = { version = "2.0.1", features = ["serde"] }
chrono = "0.4.42"
ctrlc = "3.5.0"
ignore = "0.4.23"
lazy_static = "1.5.0"
listenfd = "1.0.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full", "io-std", "io-util", "macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.16"

[[bin]]
name = "simpleclipboard-daemon"
path = "src/simpleclipboard_daemon.rs"
[[bin]]
name = "simpletree-daemon"
path = "src/simpletree_daemon.rs"

[dev-dependencies]
tempfile = "3.23.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
