[package]
name = "simpleclipboard"
version = "0.1.0"
edition = "2024"

[lib]
name = "simpleclipboard"
crate-type = ["cdylib"]
path = "src/simpleclipboard/simpleclipboard_lib.rs"

[[bin]]
name = "simpleclipboard-daemon"
path = "src/simpleclipboard/simpleclipboard_daemon.rs"

[dependencies]
arboard = "3.6.1"
bincode = { version = "2.0.1", features = ["serde"] }
libc = "0.2.176"
log = "0.4"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }

[dev-dependencies]
tempfile = "3.23.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
